# automate

./: .env.example  .gitignore  Dockerfile  README.md  SECURITY.md  TODO.md  docker-compose.yml  justfile  main.py  pyproject.toml
config/: __init__.py  cloudflare-tunnel.yml  deploy.md  settings.py
extension/: SETUP.md  background.js  manifest.json  options.html  options.js
n8n/workflows/: 01-email-triage.json  02-inbox-cleanup.json  03-bookmark-digest.json  04-bookmark-ingest.json  05-content-pipeline.json  06-professional-content.json  07-personal-content.json  08-email-priority-digest.json  content-briefing.json  email_triage.json  inbox-organizer-agent-chat.json  inbox-organizer-event-schedule.json  inbox-organizer-subworkflow.json  inbox-organizer-triggers.json  inbox-organizer.json
scripts/: export-workflows.sh  import-workflows.sh  setup.sh
services/: database.py
services/actions/: executor.py
services/bookmarks/: ingester.py
services/content/: astro_publisher.py
services/gmail/: __init__.py  classifier.py  client.py
services/llm/: __init__.py  base.py  router.py
services/llm/providers/: claude.py  gemini.py  ollama.py
services/photos_stub/: watcher.py
services/review/: queue.py
